--- a/Informe/informe.tex
+++ b/Informe/informe.tex
@@ -41,12 +41,16 @@
 \tableofcontents	
 
 \newpage
-\section{Introducción:}
+
 \input{introduccion/main}	
 
 \newpage
 \section{Ejercicio 1:}
-\input{ejercicio1/main}
+\input{ejercicio1/ej1.tex}
+
+\newpage
+\section{Ejercicio 2:}
+\input{ejercicio2/ej2.tex}
 
 
 
