--- a/Informe/ejercicio2/ej2.tex
+++ b/Informe/ejercicio2/ej2.tex
@@ -12,7 +12,7 @@ En este ejercicio vamos a setear las interrupciones basicas, osea las reservadas
 Para esto utilizamos los siguientes archivos dados por la catedra   \textit{idt.c}, \textit{isr.h}, \textit{isr.asm} y los completamos. 
 
  \subsubsection{{\large \textit{Idt.c:}}}
- En este archivo se encuentra la función \textit{IDT\_ENTRY(número, dpl)} la cual recive el numero de la interrupción y su prioridad. La misma se encontraba incompleta y necesitaba ser completada con la información necesaria. La llenamos agregandole el segmento correspondiente y los atributos correpondientes. El segmento que le correpondia se ubicaba en la direccion 0x40 (explicado en el ejercicio 1) y los atributos son los correpondientes a el valor  0x8700, ya que el formato de los atributos de una interrupcion debe ser de la siguiente manera 
+ En este archivo se encuentra la función \textit{IDT\_ENTRY(número, dpl)} la cual recive el numero de la interrupción y su prioridad. La misma se encontraba incompleta y necesitaba ser completada con la información necesaria. La llenamos agregandole el segmento correspondiente y los atributos correpondientes. El segmento que le correpondia se ubicaba en la direccion 0x40 (explicado en el ejercicio 1) y los atributos son los correpondientes a el valor  0x8700, ya que el formato de los atributos de una interrupcion debe ser de la siguiente forma:
 
  \begin{figure}[H]
 \begin{center}
@@ -73,9 +73,9 @@ La macro es la siguiente:
 \end{center}
 \end{figure}
 
-La macro de la imágen anterior reemplaza  \%1 por el primer parametro que recibe. Este parametro es el número correpsondiente a la interrupción, por ende cuando llegue la interrupucion "x", se pushea el mensaje exception"x" y print muestra por pantalla el mensaje correspondiente a la etiqueta exception"x", para luego quedarse saltando infinitamente y por lo tanto interrupiendo la ejecucion del programa. En la imagen se muestra un ejemplo del mensaje que se mostraria si se produjera la interrupcion 1 , correspondiente a la division por cero.\\
+La macro de la imágen anterior reemplaza  \%1 por el primer parametro que recibe. Este parametro es el número correpsondiente a la interrupción, por ende cuando llegue la interrupucion $"x"$, se pushea el mensaje exception$"x"$ y print muestra por pantalla el mensaje correspondiente a la etiqueta exception$"x"$, para luego quedarse saltando infinitamente y por lo tanto interrupiendo la ejecucion del programa. En la imagen se muestra un ejemplo del mensaje que se mostraria si se produjera la interrupcion 1 , correspondiente a la division por cero.\\
 
-Por ultimo escribimos la rutina de atencion de interrupciones, la cual simplemente llama a la macro anterior, tomando como parametro el número de la interrupcion.
+Por ultimo escribimos la rutina de atencion de interrupciones, la cual simplemente llama a la macro anterior, tomando como parámetro el número de la interrupcion.
 
   \begin{figure}[H]
 \begin{center}
@@ -88,3 +88,24 @@ Por ultimo escribimos la rutina de atencion de interrupciones, la cual simplemen
 
 
 \subsection{Ítem b): Cargar y probar \textit{IDT}}
+
+Para cargar la \textit{IDT} y probarla, agregamos las siguientes lineas al \textit{kernel}:
+
+\begin{center}
+    lidt [IDT\_DESC]\\
+    mov eax, 0\\
+    mov ecx, 1\\
+    div ecx$~~~~~$
+\end{center}
+
+Obteniendo el resultado esperado:
+
+  \begin{figure}[H]
+\begin{center}
+\minipage{0.8\textwidth}
+  \includegraphics[width=\linewidth]{ejercicio2/division.jpg}
+  \caption{{\small Rutina de atencion de interrrupciones.} }
+\endminipage
+\end{center}
+\end{figure}
+
