--- a/Informe/informe.tex
+++ b/Informe/informe.tex
@@ -54,6 +54,11 @@
 
 \newpage
 \section{Ejercicio 3:}
+\input{ejercicio3/ej3.tex}
+
+\newpage
+\section{Ejercicio 4:}
+\input{ejercicio4/ej4.tex}
 
 
 
