--- a/Informe/ejercicio4/ej4.tex
+++ b/Informe/ejercicio4/ej4.tex
@@ -1,1 +1,19 @@
 \subsection{Introducción:}
+
+\begin{itemize}
+\item [\textit{a)}] Completar \textit{inicializar\_mmu} que se encargue de inicializar las estructuras globales necesarias para administrar la memoria en el area libre (un contador de páginas libres).
+\item [\textit{b)}] Completar la funcion \textit{mmu\_inicializar\_memoria\_perro}.
+\end{itemize}
+
+
+
+
+
+
+
+
+
+
+
+
+
