--- a/Informe/informe.tex
+++ b/Informe/informe.tex
@@ -64,6 +64,15 @@
 \section{Ejercicio 5:}
 \input{ejercicio5/ej5.tex}
 
+\newpage
+\section{Ejercicio 6:}
+\input{ejercicio6/ej6.tex}
+
+\newpage
+\section{Ejercicio 7:}
+\input{ejercicio7/ej7.tex}
+
+
 
 
 
