--- a/Informe/ejercicio6/ej6.tex
+++ b/Informe/ejercicio6/ej6.tex
@@ -23,3 +23,39 @@ En este ejercicio trabajaremos con todo lo relacionado a la \textit{TSS}, realiz
 \item [\textit{h)}]  Ejecutar una tarea perro manualmente. Es decir, crearla y saltar a la entrada en la gdt de su respectiva TSS.
 
 \end{itemize}
+
+\subsection{Item a)}
+Para este punto definimos 18 nuevas entradas en la gdt.\\
+Las primeras dos nuevas entradas de la gdt corresponden a la \textit{Tarea inicial} y a la taréa \textit{idle} respectivamente. Las siguientes 8 entradas corresponden a los 8 perros del \textbf{jugador A} ordenadas en orden decreciente en el número de perros, es decir, el \textit{id}. Finalmente las últimas 8 entradas corresponden a los 8 perros del \textbf{jugador B} también ordenadas decrecientemente en el \textit{id}.\\
+
+\subsection{Item b)}
+Para este item lo que hacemos es lo siguiente:\\
+Primero completamos el campo \textit{base} de la entrada de la gdt correspondiente a la taréa \textit{idle}.Para ello le asignamos la dirección 0x00016000 tal como indica el enunciado.\\
+Como también nos dicen que comparte el \textit{esp} con el \textit{kernel} entonces en la entrada \textit{esp} de la \textit{TSS} le asigno 0x27000 que era el \textit{esp} asignado al kernel.Además como comparten el \textit{cr3} le asigno a la entrada correspondiente en la \textit{TSS} 0x28000.\\% por qué? ni idea
+La siguiente figura muestra como queda la \textit{TSS}\\
+
+
+INSERTAR IMAGEN
+
+
+\subsection{item c)}
+Lo que nos piden en este punto es hacer la función \textit{void tss_completar(int jugador, int perro, perro_t *rrope)};\\
+Lo primero que  hago en esta función es pedir una nueva página libre para usarlo como una pila de nivel 0 para la taréa.\\
+Lo siguiente que hago es preguntar si es la taréa (el perro) es una taréa correspondiente al \textbf{jugador A} o al \textbf{jugador B}. Supongamos que estoy rellenando una TSS para un perro del jugador A. Para el jugador B es similar.\\
+En el campo esp0 pongo la nueva página que pedí. Va a ser su espacio de trabajo.\\
+En los campos \textit{cs}, \textit{es}, \textit{gs}, \text{ss}, \textit{ds}, \textit{fs} tienen los segmentos definidos anteriormente en la gdt.\\
+Las entradas \textit{esp} y \textit{ebp} tienen 0x0402000-12.\\
+La entrada \textit{eip} tiene 0x00401000.\\
+\textit{eeflags} = 0x202, ... y así rellenamos las otras entradas con los valores correspondientes.\\
+Lo único distinto a lo descripto en el pdf es la entrada \texit{cr3} que va a ser distinto para cada taréa.\\
+El nuevo cr3 va a ser el devuelto por la función mmu_inicializar_memoria_perro. Se lo asigno al campo correspondiente y actualizo la entrada correspondiente a la GDT para esa taréa seteando los campos base e índice.
+La siguiente imágen muestra dicho proceso.\	\
+
+
+
+
+
+
+
+
+
